--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
-h1 {
-  color: red;
+/* Navbar */
+
+.navbar {
+  padding: 2rem;
+  background-color: #f5f6f7;
+}
+
+.navbar-collapse {
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Responsive */
+
+@media screen and (max-width: 767px) {
+  .navbar-brand {
+    display: none;
+  }
 }
