hero section probably

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+/* General */
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
 /* Navbar */
 
 .navbar {
@@ -8,6 +21,30 @@
 .navbar-collapse {
   align-items: center;
   justify-content: space-between;
+}
+
+/* Hero */
+
+.hero {
+  background-color: #f5f6f7;
+  min-height: 450px;
+  text-align: center;
+}
+
+.hero-main {
+  padding: 3rem;
+}
+
+.hero-profile-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 20px;
+}
+
+.hero-main h2 {
+  font-size: 1.5rem;
+  color: #615151;
 }
 
 /* Responsive */
