--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,21 @@ h1 {
   font-family: "Rubik Dirt", cursive;
 }
 
+.section-dark {
+  background-color: #1b1b32;
+  color: white;
+}
+
+.section-title {
+  font-size: 2rem;
+  padding: 15px 0;
+  font-family: "Rubik Dirt", cursive;
+}
+
+.section-text {
+  font-size: 1.2rem;
+}
+
 /* Navbar */
 
 .navbar {
@@ -39,7 +54,6 @@ h1 {
 .hero-profile-img {
   width: 200px;
   height: 200px;
-  border-radius: 50%;
   margin: 20px;
 }
 
@@ -48,10 +62,28 @@ h1 {
   color: #615151;
 }
 
+/* About Me */
+
+.about-me {
+  height: 500px;
+  padding: 10px;
+}
+
+.about-me-container {
+  max-width: 600px;
+  text-align: center;
+}
+
 /* Responsive */
 
 @media screen and (max-width: 767px) {
   .navbar-brand {
     display: none;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  #hero-inferior-img {
+    max-width: 600px;
   }
 }
