--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ h1 {
   color: white;
 }
 
+.section-light {
+  color: black;
+  background-color: white;
+}
+
 .section-title {
   font-size: 2rem;
   padding: 15px 0;
@@ -72,6 +77,51 @@ h1 {
 .about-me-container {
   max-width: 600px;
   text-align: center;
+}
+
+/* Experience */
+
+.experience {
+  padding: 40px 40px 60px 40px;
+}
+
+.experience .column {
+  padding: 20px;
+  border: 2px solid #8080804d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  transition: all 0.2s ease-in;
+}
+
+.experience .column:hover {
+  color: white;
+  background-color: #1b1b32;
+}
+
+.experience-title {
+  font-size: 25px;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.badges-container {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.badge {
+  margin: 5px;
+}
+
+.experience i {
+  font-size: 2.5rem;
+  color: #7ade30;
+  background-color: #0a0a23;
+  padding: 8px 19px;
+  border-radius: 50%;
 }
 
 /* Responsive */
